# sightreader

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  ca_profile.xml  compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml  sightreader-ai-trainer-image.yml
docker/: entrypoint.sh
docker/unraid/: README.md
docs/wiki/: Architecture.md  Data-and-Licensing.md  Development.md  Evaluation.md  Generation-Pipeline.md  Home.md  Project-Overview.md  Roadmap.md  Training-Plan.md  _Sidebar.md
src/sightreader_ai/: __init__.py  cli.py  difficulty.py  export.py  generator.py  music.py  tokenizer.py  validator.py
templates/: sightreader-ai-trainer.xml
tests/: test_generator.py
training/: build_synthetic_dataset.py  train_transformer.py
